--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
 	  <!-- own stylesheet -->
 	<link rel="stylesheet" href="CSS - connected to every page/bootstrap.min.css" type="text/css">
-	  <link href="start page/css/stylesheet2.css" rel="stylesheet" type="text/css">
+	  <link href="index/css/stylesheet2.css" rel="stylesheet" type="text/css">
 	  
 	<!-- change title to page --> 
     <title>Log-in page</title>
